<resources>
    <string name="app_name">KuukautisApp</string>
    <string name="registration">Rekisteröityminen</string>
    <string name="email">Sähköposti</string>
    <string name="password">Salasana</string>
    <string name="register">Rekisteröidy</string>
    <string name="login">Kirjaudu sisään</string>
    <string name="missing_fields">Täytä kaikki kentät!</string>
    <string name="invalid_email">Sähköposti ei ole validi!</string>
    <string name="invalid_password">Salasanassa pitää olla ainakin 8 merkkiä!</string>

    <string name="welcome_message">Tervetuloa käyttämään KuukautisAppia!</string>
    <string name="flow_circle_description">Kirjattu kuukautisten vuotopäivä</string>
    <string name="prediction_circle_description">Seuraavan kuukautisvuodon ennustettu alkamispäivä</string>
    <string name="general_app_info">Sovelluksella voit seurata kuukautiskiertoasi ja ennustaa seuraavan kierron alkamispäivän. Kuukautisvuotopäiviä kirjataan kalenteriin, minkä perusteella sovellus generoi statistiikkaa ja ennusteen kuukautisten käyttäytymisestä.</string>

    <string name="new_entry">Lisää merkintä</string>
    <string name="info_btn">Info</string>
    <string name="close">Sulje</string>
    <string name="info_text_markings">Kalenterin punaiset merkinnät edustavat lisättyjä vuotopäiviä. Sininen merkintä on seuraavan kuukautisvuodon ennustettu alkamispäivä, joka perustuu edellisiin kuukautisiin.</string>
    <string name="cycle_length_text">Kierron kesto:</string>
    <string name="placeholder_value">Ei saatavilla</string>
    <string name="flow_length">Vuodon kesto:</string>
    <string name="next_flow">Seuraava vuoto:</string>
    <string name="log_out">Kirjaudu ulos</string>
    <string name="add_date">Lisää vuotopäivä</string>
    <string name="days_duration">päivää</string>
    <string name="delete_confirmation">Haluatko poistaa merkinnän päivältä</string>
    <string name="delete">Poista</string>
    <string name="cancel">Peruuta</string>
    <string name="info_text_averages">Generoitu kuukautiskierron pituus ja vuodon kesto ovat keskiarvoja kolmen viimeisen täyden kiertojakson ajalta.</string>
    <string name="info_text_deleting">Kalenterimerkinnän voi poistaa klikkaamalla sitä. Tällä hetkellä voi poistaa vain viimeisimmän merkinnän.</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">K</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">P</string>
    <string name="material_calendar_saturday">L</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>Tammikuu</item>
        <item>Helmikuu</item>
        <item>Maaliskuu</item>
        <item>Huhtikuu</item>
        <item>Toukokuu</item>
        <item>Kesäkuu</item>
        <item>Heinäkuu</item>
        <item>Elokuu</item>
        <item>Syyskuu</item>
        <item>Lokakuu</item>
        <item>Marraskuu</item>
        <item>Joulukuu</item>
    </array>

    <string name="material_calendar_today_button">Tänään</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Peruuta</string>
    <string name="registration_successful">Rekisteröinti onnistui!</string>
    <string name="registeration_unsuccesful">Rekisteröinti epäonnistui!</string>
    <string name="back">Takaisin</string>
    <string name="login_unsuccessful">Kirjautuminen epäonnistui!</string>
    <string name="data_load_error">Virhe tietojen latauksessa!</string>
    <string name="confirm_password">Vahvista salasana</string>
    <string name="password_not_match">Salasana ei täsmää!</string>
    <string name="forgot_password">Unohditko salasanasi?</string>
    <string name="reset_password">Vaihda salasana</string>
    <string name="email_password_reset">Sähköpostiviesti lähetetty salasanan resetoimiseen!</string>
    <string name="email_password_reset_fail">Virhe resetointiviestin lähettämisessä!</string>
    <string name="background_img_description">Kukkaniitty</string>
</resources>