<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/flower_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_img_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_rounded_corners"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:gravity="center">

        <TextView
            android:id="@+id/startTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_margin="25dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login"
            android:onClick="onLoginClick"
            android:textAllCaps="false"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/register"
            android:onClick="onRegisterClick"
            android:textAllCaps="false"
            android:background="@drawable/button_background"/>

    </LinearLayout>
</FrameLayout>
