<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/cycle_length_avg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle_length_text" />

        <TextView
            android:id="@+id/cycle_length_avg_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/flow_length_avg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flow_length" />

        <TextView
            android:id="@+id/flow_length_avg_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/next_flow_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_flow" />

        <TextView
            android:id="@+id/next_flow_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_value" />
    </LinearLayout>

</LinearLayout>
